--- a/images/Web Development Made Easy_files/styles.css
+++ b/images/Web Development Made Easy_files/styles.css
@@ -6,7 +6,7 @@
 .header_container{
     color: white;
     background-color:#1F2937;
-    padding: 5px;
+    padding: 2%;
 }
 
 .header{
@@ -15,15 +15,11 @@
     justify-content: space-around;
     align-items: center;
     padding-right: 10%;
-    margin:0 0 35px 0;
 }
-h1 img{
-    border-radius: 50%;
-}
-/* h1{
+h1{
     font-size: 24px;
     color:#F9FAF8;
-} */
+}
 h2{
     font-weight: 900;
     font-size:48px;
@@ -57,10 +53,7 @@ ul li a {
     color:#1F2937;
     margin-top:20px;
 }
-#btn_signup{
-    margin-top: 10px;
-}
-#btn,#btn_signup{
+button{
     width: 150px;
     background-color: #3882F6;
     color: white;
@@ -102,7 +95,6 @@ blockquote p{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
 }
 .main{
     display: flex;
